@@ -10,6 +10,7 @@ Jump Start Changelog
 * Fixed: Product columns selections in WooCommerce theme options.
 * Fixed: Chat post format is supported, but wasn't registered.
 * Fixed: With ThemeForest update system, disabling backups didn't work.
+* Fixed: When logged in, frontend lightbox will now display over admin bar.
 
 --------------------------------------------------------------
 
